# market-bomb

./: .env  .gitignore  .rustfmt.toml  Cargo.toml  config.toml  run
builder/: build.py  build_df.py  install  predict.py
builder/models/BTCUSDT/15m/32/model/: saved_model.pb
builder/models/BTCUSDT/15m/32/model/variables/: variables.data-00000-of-00001  variables.index
src/: api.rs  chart.rs  cli.yaml  config.rs  core.rs  data.rs  database.rs  frame.rs  main.rs  normalized.rs  prelude.rs  strategy.rs  terminal.rs  web_server.rs
src/api/: binance.rs  ftx.rs
src/benches/: db_benches.rs
src/chart/: candle.rs  candles.rs  line.rs  line_cross.rs  strong_point.rs  trend_line.rs
src/chart/indicators/: ema.rs  mod.rs
src/core/: candle.rs  meta.rs  moving_average.rs  strong_point.rs
src/database/: migrations.rs
src/normalized/: mod.rs  strat1.rs
src/prelude/: range.rs  time.rs
src/terminal/: command.rs
web/: package.json  postcss.config.js  yarn.lock.backup
web/public/: index.html
web/src/: App.js  chartHook.js  index.js
web/src/UI/: Button.js  Config.js  Select.js  Switch.js  index.js
web/src/lib/: candle_detail.js  candles.js  chart.js  momentum_line.js  strong_points.js  trend_line_crosses.js  trend_lines.js  util.js
web/src/styles/: app.scss
