[package]
authors = ["Dakota Brink <git@kota.is>"]
edition = "2021"
name = "market_bomb"
version = "0.1.0"

[dependencies]
actix-web = "3"
crossbeam = "0.8"
bencher = "0.1.5"
chrono = { version = "0.4.19", features = ["serde"] }
env_logger = "0.9"
indicatif = "0.16"
lazy_static = "1.4.0"
num_cpus = "1.13"
postgres = "0.19"
qstring = "0.7.2"
r2d2 = "0.8"
r2d2_postgres = "0.18"
rayon = "1.5"
regex = "1"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
anyhow = "1"
tui = "0.17"
termion = "1.5"
hashbrown = "0.12"
